Bug 510780 - Can't add secrets to new wallets
Summary: Can't add secrets to new wallets
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-19 08:46 UTC by Nicola Mori
Modified: 2025-10-28 12:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicola Mori 2025-10-19 08:46:54 UTC
SUMMARY
I cannot add new secrets to a new wallet (either Blowfish or GPG) nor import an encrypted wallet.

STEPS TO REPRODUCE
1. Create a new wallet and open it
2. Alternatively, try to import a PGP encrypted wallet

OBSERVED RESULT
For the new wallet, no folders are available and it's not possible to add new secrets (right click does nothing). When importing an encrypted wallet the procedure ends with no error messages but the wallet is not displayed; trying again to import it fails because of an already existing wallet with the same name.

EXPECTED RESULT
It should be possible to add new folders and secrets to the new wallet by right-clicking, and the imported encrypted wallet should be correctly displayed.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.2-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Installed packages:
kwallet 6.19.0-1
kwallet5 5.116.0-3
kwalletmanager 25.08.2-1
libsecret 0.21.7-1
Comment 1 Bug Janitor Service 2025-10-19 18:30:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kwalletmanager/-/merge_requests/67
Comment 2 Nicolas Fella 2025-10-19 18:31:48 UTC
> When importing an encrypted wallet the procedure ends with no error messages but the wallet is not displayed; trying again to import it fails because of an already existing wallet with the same name.

Can you please open a separate report about this? It's better to not have unrelated things in the same ticket
Comment 3 Nicola Mori 2025-10-20 04:52:15 UTC
(In reply to Nicolas Fella from comment #2)
> > When importing an encrypted wallet the procedure ends with no error messages but the wallet is not displayed; trying again to import it fails because of an already existing wallet with the same name.
> 
> Can you please open a separate report about this? It's better to not have
> unrelated things in the same ticket

Done: https://bugs.kde.org/show_bug.cgi?id=510809

I also modified the title of this report, thanks for your support.
Comment 4 Nicolas Fella 2025-10-28 11:53:47 UTC
Git commit 5fd965586b3a25fffe2d40b776d8ed7789340555 by Nicolas Fella.
Committed on 28/10/2025 at 11:48.
Pushed by nicolasfella into branch 'master'.

Make sure entrylist context menu is created for empty list

The context menu is populated in entrySelectionChanged, make sure that we call that at least once

Otherwise there will be no context menu for an empty list, and thus no way to add entries

M  +2    -0    src/manager/kwalleteditor.cpp

https://invent.kde.org/utilities/kwalletmanager/-/commit/5fd965586b3a25fffe2d40b776d8ed7789340555
Comment 5 Nicolas Fella 2025-10-28 12:45:54 UTC
Git commit 6031dc97cb46a6203178df9edd6615416e987033 by Nicolas Fella.
Committed on 28/10/2025 at 12:45.
Pushed by nicolasfella into branch 'release/25.08'.

Make sure entrylist context menu is created for empty list

The context menu is populated in entrySelectionChanged, make sure that we call that at least once

Otherwise there will be no context menu for an empty list, and thus no way to add entries
(cherry picked from commit 5fd965586b3a25fffe2d40b776d8ed7789340555)

M  +2    -0    src/manager/kwalleteditor.cpp

https://invent.kde.org/utilities/kwalletmanager/-/commit/6031dc97cb46a6203178df9edd6615416e987033