Make sure entrylist context menu is created for empty list

The context menu is populated in entrySelectionChanged, make sure that we call that at least once

Otherwise there will be no context menu for an empty list, and thus no way to add entries

BUG: 510780